--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>Innova &mdash; Colorlib Website Template</title>
+    <title>Lettering im Stall</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -47,19 +47,16 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Home</a>
+                            <a class="nav-link active" href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="letteringlernen.html">Lettering lernen</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link" href="anfrage.html">Deine individuelle Anfrage</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="derstall.html">Der Stall</a>
                         </li>
                     </ul>
 
@@ -112,154 +109,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Workshops -->
-    <div class="section bg-light " id="Workshops">
-        <div class="container">
-            <div class="row justify-content-center mb-5">
-                <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="">
-                    <h2 class="mb-4 section-title">Workshops</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="media d-block media-custom text-center">
-                        <a href="#"><img src="images/2Guide_1000p.JPG" alt="Image Placeholder" class="img-fluid"></a>
-                        <div class="media-body">
-                            <h3 class="mt-0 text-black">Anfänger</h3>
-                            <p>10. April 2020</p>
-                            <p>55€ Kursgebühr</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                    <div class="media d-block media-custom text-center">
-                        <a href="#"><img src="images/2VonOben_1800p.JPG" alt="Image Placeholder" class="img-fluid"></a>
-                        <div class="media-body">
-                            <h3 class="mt-0 text-black">Fortgeschrittene</h3>
-                            <p>17. April 2020</p>
-                            <p>60€ Kursgebühr</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
-                    <div class="media d-block media-custom text-center">
-                        <a href="#"><img src="images/StifteLiegend450x300.JPG" alt="Image Placeholder" class="img-fluid"></a>
-                        <div class="media-body">
-                            <h3 class="mt-0 text-black">Individuelle Anfrage</h3>
-                            <p>Individueller Termin</p>
-                            <p>Schreibe mir eine Nachricht</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-
-    <!-- Der Stall -->
-    <div class="section portfolio-section" id="DerStall">
-        <div class="container">
-            <div class="row mb-5 justify-content-center" data-aos="fade-up">
-                <div class="col-md-8 text-center">
-                    <h2 class="mb-4 section-title">Der Stall</h2>
-                    <p>
-                        Bis vor einigen Jahren war meine Workshop Location tatsächlich noch der Stall meines Opas. Mein Papa hat gemeinsam mit meinem Bruder vor vier Jahren dann angefangen den Stall Stück für Stück umzubauen.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row mb-5 no-gutters">
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Design</p>
-                        </div>
-                        <img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
-                    <a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
-                </div>
-
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid">
-                    </a>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-
-    <!-- Der Stall 2 -->
-    <div class="section bg-light" id="DerStall2">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-lg-6 ml-auto pl-lg-4 mb-5 order-2">
-
-                    <img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">
-
-                    <!--<span class="d-block text-uppercase text-primary">About US</span>-->
-                    <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
-                    <p>Zwei große Tische bieten Platz für maximal 16 Personen, eine kleine Küchenzeile mit Kaffeemaschine, Garderobe sowie einer Toilette.</p>
-                    <p class="mb-5">Parkmöglichkeiten gibt es direkt nach dem Überqueren der Tauberbrücke. Auf der linken Seite ist ein großer öffentlicher Parkplatz der ehemaligen Feuerwehr.</p>
-                    <p><a href="#Workshops" class="btn btn-outline-black">Workshops</a></p>
-                </div>
-                <div class="col-lg-6 order-1">
-                    <figure class="img-dotted-bg">
-                        <img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid">
-                    </figure>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    <div class="bg-primary py-5">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-7">
-                    <h3 class="text-white mb-2 font-weight-normal">Individuelle Anfrage</h3>
-                    <p class="text-white mb-4">Für individuelle Workshops wie einem Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden – ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!</p>
-
-                    <p class="mb-0" data-aos="fade-up" data-aos-delay="200"><a href="contact.html" class="btn btn-outline-white px-4 py-3">Anfragen!</a></p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
 
     <footer class="site-footer" role="contentinfo">
         <div class="container">
