--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
                     <h1 class="mb-4" data-aos="fade-up" data-aos-delay="100">Wie schön, dass Du hier bist!</h1>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="#Willkommen">Willkommen</a></p>
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
         </div>
     </div>
 
-    <footer class="site-footer" role="contentinfo">
+    <footer class="site-footer bg-secondary py-5" role="contentinfo">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
