--- a/anfrage.html
+++ b/anfrage.html
@@ -25,7 +25,6 @@
 
   <!-- Theme Style -->
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -71,22 +70,23 @@
          style="background-image: url('images/BlickindenStall_1800p.JPG');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
-                <div class="col-lg-12 text-center col-sm-12">
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="100">Wie schön, dass Du hier bist!</h1>
+                <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Anfrage</h1>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Deine Anmeldung zum Kurs</a></p>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="section">
+    <div class="section" id="Anmeldung">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 contact-form-contact-info">
                     <div class="row">
                         <div class="col-lg-12" data-aos="fade-up" data-aos-delay="">
                             <p class="d-flex">
-                                <span class="ion-ios-location icon mr-5"></span>
+                                <span class="ion-ios-location icon mr-3"></span>
                                 <span>
                                     Für individuelle Workshops wie einem Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden. Einfach unter Kurs -> "Individuelle Anfrage" auswählen.
                                     ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!
@@ -94,65 +94,79 @@
                             </p>
                         </div>
                         <!--<div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                            <p class="d-flex">
-                                <span class="ion-ios-telephone icon mr-5"></span>
-                                <span>+1 242 4942 290</span>
-                            </p>
-                        </div>
-                        <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                            <p class="d-flex">
-                                <span class="ion-android-mail icon mr-5"></span>
-                                <span>info@yourdomain.com</span>
-                            </p>
-                        </div>-->
+                    <p class="d-flex">
+                        <span class="ion-ios-telephone icon mr-5"></span>
+                        <span>+1 242 4942 290</span>
+                    </p>
+                </div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <p class="d-flex">
+                        <span class="ion-android-mail icon mr-5"></span>
+                        <span>info@yourdomain.com</span>
+                    </p>
+                </div>-->
                     </div>
                 </div>
             </div>
 
-            <div class="row mt-5">
-                <div class="col-12 mb-5 order-2">
-                    <form action="#" method="post">
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" class="form-control ">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label for="phone">Phone</label>
-                                <input type="text" id="phone" class="form-control ">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
 
+                <div class="row mt-5">
+                    <div class="col-12 mb-5 order-2">
+                        <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/erich.balles@hotmail.de" method="post">
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <label for="name">Vorname</label>
+                                    <input type="text" id="name" name="Vorame" placeholder="David" class="form-control ">
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="phone">Nachname</label>
+                                    <input type="text" id="name" name="Nachname" placeholder="Letterman" class="form-control ">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" class="form-control ">
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <label for="message">Write Message</label>
-                                <textarea name="message" id="message" class="form-control " cols="30" rows="8"></textarea>
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control ">
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="full-name">Kurs wählen</label>
+                                    <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
+                                        <option value="Select" selected="" disabled="">Kurs</option>
+                                        <option value="Anfaenger 05.05.2020">Anfänger 05.05.2020</option>
+                                        <option value="Anfaenger 12.05.2020">Anfänger 12.05.2020</option>
+                                        <option value="Fortgeschritten  19.05.2020">Fortgeschritten 19.05.2020</option>
+                                        <option value="Fortgeschritten  26.05.2020">Fortgeschritten 26.05.2020</option>
+                                        <option value="Individuell">Individuelle Anfrage</option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <input type="submit" value="Send Message" class="btn btn-outline-black px-3 py-3">
+
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+                                    <label for="message">Nachricht</label>
+                                    <textarea name="Nachricht" id="message" class="form-control " cols="30" rows="8"></textarea>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <input type="submit" value="Anmelden" class="btn btn-outline-black px-3 py-3">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+
                 </div>
-
-
-            </div>
-
+            
 
         </div>
     </div>
+
 
     <footer class="site-footer  bg-secondary py-5" role="contentinfo">
         <div class="container">
