--- a/derstall.html
+++ b/derstall.html
@@ -72,7 +72,8 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="100">Wie schön, dass Du hier bist!</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Der Stall</h1>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#DerStall">Alles über die Location</a></p>
                 </div>
             </div>
         </div>
@@ -93,43 +94,49 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid"></a>
+
+                    <!--<a href="portfolio-single.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Project Name Here</h2>
                             <p>Business</p>
                         </div>
                         <img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
+                    </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="images/Radio_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
+
+                    <!--<a href="portfolio-single.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Project Name Here</h2>
                             <p>Design</p>
                         </div>
                         <img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
+                    </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <!--<a href="portfolio-single.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Project Name Here</h2>
                             <p>Business</p>
                         </div>
                         <img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid">
-                    </a>
+                    </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>
+                    <!--<a href="portfolio-single.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Project Name Here</h2>
                             <p>Business</p>
                         </div>
                         <img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid">
-                    </a>
+                    </a>-->
                 </div>
 
             </div>
