--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -72,7 +72,8 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="100">Wie schön, dass Du hier bist!</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering Lernen</h1>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Infos">Infos</a></p>
                 </div>
             </div>
         </div>
@@ -81,7 +82,7 @@
     <!-- Was alles dazugehört-->
 
 
-    <div class="section bg-light" >
+    <div class="section bg-light" id="Infos">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
