footer angefangen anzupassen

--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -137,7 +137,7 @@
                     <h3 class="text-white mb-2 font-weight-normal">Individuelle Anfrage</h3>
                     <p class="text-white mb-4">Für individuelle Workshops wie einem Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden – ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!</p>
 
-                    <p class="mb-0" data-aos="fade-up" data-aos-delay="200"><a href="contact.html" class="btn btn-outline-white px-4 py-3">Anfragen!</a></p>
+                    <p class="mb-0" data-aos="fade-up" data-aos-delay="200"><a href="anfrage.html" class="btn btn-outline-white px-4 py-3">Anfragen!</a></p>
                 </div>
             </div>
 
@@ -162,10 +162,10 @@
 
                     <h3 class="mb-4">Navigation</h3>
                     <ul class="list-unstyled footer-link">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Willkommen</a></li>
+                        <li><a href="letteringlernen.html">Lettering lernen</a></li>
+                        <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
+                        <li><a href="derstall.html">Der Stall</a></li>
                     </ul>
 
 
@@ -173,10 +173,8 @@
                 </div>
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
-                        <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
