--- a/anfrage.html
+++ b/anfrage.html
@@ -184,10 +184,10 @@
 
                     <h3 class="mb-4">Navigation</h3>
                     <ul class="list-unstyled footer-link">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Willkommen</a></li>
+                        <li><a href="letteringlernen.html">Lettering lernen</a></li>
+                        <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
+                        <li><a href="derstall.html">Der Stall</a></li>
                     </ul>
 
 
@@ -195,10 +195,8 @@
                 </div>
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
-                        <li><a href="#" class="p-2"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-linkedin"></span></a></li>
-                        <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
