--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <div class="col-md-5 mr-auto" data-aos="fade-up" data-aos-delay="">
                     <h2 class="mb-4 section-title">Willkommen</h2>
                     <p>
-                        Ich bin Lena! Ich bin ein absoluter Familienmensch und verbringe sehr gerne Zeit in meiner Heimat.
+                        Ich bin Lena! Da ich ein absoluter Familienmensch bin, verbringe sehr gerne Zeit in meiner Heimat.
                         Daher habe ich auch hier studiert, meine Arbeit und mein Zuhause gesucht und zum Glück auch gefunden.
-                        Kurz bevor es zu spät war habe ich das Lettering für mich entdeckt. Kurz bevor es zu spät war deshalb, da jedes Jahr etwas Neues zu lernen wofür ich meine Hände brauche meine kreative Ausrede für Neujahrsvorsätze ist, um nicht auf Süßigkeiten und Ähnliches verzichten zu müssen. Ich habe auf diese Weise schon gelernt Mützen und Tierchen zu häkeln, Körbe zu flechten, Kränze zu binden und eben last Minute - 3 Tage vor Silvester - das Lettering zu lernen, indem ich selbst einen Workshop besucht hatte. Das war 2017.
+                        Kurz bevor es zu spät war habe ich das Lettering für mich entdeckt. „Kurz bevor es zu spät war“ deshalb, weil ich jedes Jahr etwas Neues lernen möchte wofür ich meine Hände brauche. Das ist meine kreative Ausrede für Neujahrsvorsätze, um nicht auf Süßigkeiten und Ähnliches verzichten zu müssen. Ich habe auf diese Weise schon gelernt Mützen und Tierchen zu häkeln, Körbe zu flechten, Kränze zu binden und eben last Minute - 3 Tage vor Silvester - das Lettering zu lernen, indem ich selbst einen Workshop besucht hatte. Das war 2017.
                     </p>
                     <p>
                         Durch Pinterest und Instagram entdeckte ich dann recht schnell meine Liebe zum Lettering. Seither schlägt mein Herz für kreative Schriftgestaltung.
@@ -115,13 +115,11 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
-                    <h3 class="mb-4">About Us</h3>
-                    <p class="mb-5">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias nihil numquam aspernatur
-                        inventore sint eligendi nostrum!
-                    </p>
-
-
+                    <h3 class="mb-4">Lettering im Stall</h3>
+                    <p>Lena Staudt</p>
+                    <p>Im Stall</p>
+                    <p>Kitzlesweg 15</p>
+                    <p>97980 Markelsheim</p>
                 </div>
                 <div class="col-md-3 ml-auto">
 
@@ -131,6 +129,7 @@
                         <li><a href="letteringlernen.html">Lettering lernen</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
+                        <li><a href="impressum.html">Impressum</a></li>
                     </ul>
 
 
