--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -113,7 +113,7 @@
                             <li class="mb-3">
                                 <strong class="d-block text-black">Inklusive:</strong>
                                 <ul>
-                                    <li style="list-style: disc; display: list-item; margin-left:5px;">Hand- und Brushlettering Guide</li>
+                                    <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Snacks und Zitronenwasser</li>
@@ -150,13 +150,11 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
-                    <h3 class="mb-4">About Us</h3>
-                    <p class="mb-5">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias nihil numquam aspernatur
-                        inventore sint eligendi nostrum!
-                    </p>
-
-
+                    <h3 class="mb-4">Lettering im Stall</h3>
+                    <p>Lena Staudt</p>
+                    <p>Im Stall</p>
+                    <p>Kitzlesweg 15</p>
+                    <p>97980 Markelsheim</p>
                 </div>
                 <div class="col-md-3 ml-auto">
 
@@ -166,6 +164,7 @@
                         <li><a href="letteringlernen.html">Lettering lernen</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
+                        <li><a href="impressum.html">Impressum</a></li>
                     </ul>
 
 
