--- a/anfrage.html
+++ b/anfrage.html
@@ -72,7 +72,7 @@
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
                     <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Anfrage</h1>
-                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Deine Anmeldung zum Kurs</a></p>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Deine individuelle Anfrage</a></p>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                             <p class="d-flex">
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <span>
-                                    Für individuelle Workshops wie einem Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden. Einfach unter Kurs -> "Individuelle Anfrage" auswählen.
+                                    Für ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden.
                                     ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!
                                 </span>
                             </p>
@@ -112,7 +112,7 @@
 
                 <div class="row mt-5">
                     <div class="col-12 mb-5 order-2">
-                        <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/erich.balles@hotmail.de" method="post">
+                        <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/letteringimstall@gmail.com" method="post">
                             <div class="row">
                                 <div class="col-md-6 form-group">
                                     <label for="name">Vorname</label>
@@ -154,7 +154,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 form-group">
-                                    <input type="submit" value="Anmelden" class="btn btn-outline-black px-3 py-3">
+                                    <input type="submit" value="Abschicken" class="btn btn-outline-black px-3 py-3">
                                 </div>
                             </div>
                         </form>
@@ -172,13 +172,11 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
-                    <h3 class="mb-4">About Us</h3>
-                    <p class="mb-5">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias nihil numquam aspernatur
-                        inventore sint eligendi nostrum!
-                    </p>
-
-
+                    <h3 class="mb-4">Lettering im Stall</h3>
+                    <p>Lena Staudt</p>
+                    <p>Im Stall</p>
+                    <p>Kitzlesweg 15</p>
+                    <p>97980 Markelsheim</p>
                 </div>
                 <div class="col-md-3 ml-auto">
 
@@ -188,10 +186,8 @@
                         <li><a href="letteringlernen.html">Lettering lernen</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
+                        <li><a href="impressum.html">Impressum</a></li>
                     </ul>
-
-
-
                 </div>
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
