--- a/derstall.html
+++ b/derstall.html
@@ -32,7 +32,7 @@
 
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
-            <div class="container-fluid">                
+            <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
                          style="max-height: 70px;">
@@ -97,61 +97,62 @@
                     <a href="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid"></a>
 
                     <!--<a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>-->
+                    <div class="work-text">
+                        <h2>Project Name Here</h2>
+                        <p>Business</p>
+                    </div>
+                    <img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid">
+                </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <a href="images/Radio_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
 
                     <!--<a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Design</p>
-                        </div>
-                        <img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid">
-                    </a>-->
+                    <div class="work-text">
+                        <h2>Project Name Here</h2>
+                        <p>Design</p>
+                    </div>
+                    <img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid">
+                </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
                     <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
                     <!--<a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid">
-                    </a>-->
+                    <div class="work-text">
+                        <h2>Project Name Here</h2>
+                        <p>Business</p>
+                    </div>
+                    <img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid">
+                </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
                     <a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>
                     <!--<a href="portfolio-single.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Project Name Here</h2>
-                            <p>Business</p>
-                        </div>
-                        <img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid">
-                    </a>-->
+                    <div class="work-text">
+                        <h2>Project Name Here</h2>
+                        <p>Business</p>
+                    </div>
+                    <img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid">
+                </a>-->
                 </div>
 
             </div>
 
         </div>
-    </div>
+        <!-- </div>
 
-    <!-- Der Stall 2 -->
-    <div class="section bg-light" id="DerStall2">
+    Der Stall 2
+     <div class="section bg-light" id="DerStall2">-->
         <div class="container">
             <div class="row">
 
                 <div class="col-lg-6 ml-auto pl-lg-4 mb-5 order-2">
 
-                    <img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">
+                    <!--<img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">-->
+                    <a href="images/Anstossen_1800p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid"></a>
 
                     <!--<span class="d-block text-uppercase text-primary">About US</span>-->
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
@@ -161,7 +162,8 @@
                 </div>
                 <div class="col-lg-6 order-1">
                     <figure class="img-dotted-bg">
-                        <img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid">
+                        <!--<img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid">-->
+                        <a href="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid"></a>
                     </figure>
 
                 </div>
@@ -177,13 +179,11 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
-                    <h3 class="mb-4">About Us</h3>
-                    <p class="mb-5">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias nihil numquam aspernatur
-                        inventore sint eligendi nostrum!
-                    </p>
-
-
+                    <h3 class="mb-4">Lettering im Stall</h3>
+                    <p>Lena Staudt</p>
+                    <p>Im Stall</p>
+                    <p>Kitzlesweg 15</p>
+                    <p>97980 Markelsheim</p>
                 </div>
                 <div class="col-md-3 ml-auto">
 
@@ -193,10 +193,8 @@
                         <li><a href="letteringlernen.html">Lettering lernen</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
+                        <li><a href="impressum.html">Impressum</a></li>
                     </ul>
-
-
-
                 </div>
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
