--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="col-md-5 mr-auto" data-aos="fade-up" data-aos-delay="">
                     <h2 class="mb-4 section-title">Willkommen</h2>
                     <p>
-                        Ich bin Lena! Da ich ein absoluter Familienmensch bin, verbringe sehr gerne Zeit in meiner Heimat.
+                        Ich bin Lena! Da ich ein absoluter Familienmensch bin, verbringe ich sehr gerne Zeit in meiner Heimat.
                         Daher habe ich auch hier studiert, meine Arbeit und mein Zuhause gesucht und zum Glück auch gefunden.
                         Kurz bevor es zu spät war habe ich das Lettering für mich entdeckt. „Kurz bevor es zu spät war“ deshalb, weil ich jedes Jahr etwas Neues lernen möchte wofür ich meine Hände brauche. Das ist meine kreative Ausrede für Neujahrsvorsätze, um nicht auf Süßigkeiten und Ähnliches verzichten zu müssen. Ich habe auf diese Weise schon gelernt Mützen und Tierchen zu häkeln, Körbe zu flechten, Kränze zu binden und eben last Minute - 3 Tage vor Silvester - das Lettering zu lernen, indem ich selbst einen Workshop besucht hatte. Das war 2017.
                     </p>
