--- a/anfrage.html
+++ b/anfrage.html
@@ -89,7 +89,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <span>
                                     Für ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden.
-                                    ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!
+                                    Ich bin mir sicher, wir finden einen Termin und stellen ein tolles Kreativprogramm zusammen!
                                 </span>
                             </p>
                         </div>
