--- a/derstall.html
+++ b/derstall.html
@@ -158,7 +158,7 @@
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
                     <p>Zwei große Tische bieten Platz für maximal 16 Personen, eine kleine Küchenzeile mit Kaffeemaschine, Garderobe sowie einer Toilette.</p>
                     <p class="mb-5">Parkmöglichkeiten gibt es direkt nach dem Überqueren der Tauberbrücke. Auf der linken Seite ist ein großer öffentlicher Parkplatz der ehemaligen Feuerwehr.</p>
-                    <p><a href="#Workshops" class="btn btn-outline-black">Workshops</a></p>
+                    <p><a href="letteringlernen.html" class="btn btn-outline-black">Workshops</a></p>
                 </div>
                 <div class="col-lg-6 order-1">
                     <figure class="img-dotted-bg">
