--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -32,38 +32,36 @@
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
-                </a>
+                <!--
+    <a class="navbar-brand" href="index.html">
+        <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
+             style="max-height: 70px;">
+    </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
-                        aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav pl-md-5 ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Willkommen</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="letteringlernen.html">Lettering lernen</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link active" href="anfrage.html">Deine individuelle Anfrage</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="derstall.html">Der Stall</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop</a>
-                        </li>
-                    </ul>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
+            aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
 
-                </div>
+    <div class="collapse navbar-collapse" id="navbarsExample05">
+        <ul class="navbar-nav pl-md-5 ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Willkommen</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="letteringlernen.html">Lettering lernen</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link active" href="anfrage.html">Deine individuelle Anfrage</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="derstall.html">Der Stall</a>
+            </li>
+        </ul>
+
+
+    </div>-->
             </div>
         </nav>
     </header>
@@ -74,8 +72,8 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Anfrage</h1>
-                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Deine individuelle Anfrage</a></p>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Anfängerkurs buchen</h1>
+                    <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Melde dich an</a></p>
                 </div>
             </div>
         </div>
@@ -90,10 +88,17 @@
                         <div class="col-lg-12" data-aos="fade-up" data-aos-delay="">
                             <p class="d-flex">
                                 <span class="ion-ios-location icon mr-3"></span>
-                                <span>
-                                    Für Auftragsarbeit, ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden.
-                                    Ich bin mir sicher, wir stellen ein tolles Kreativprogramm zusammen und/oder finden einen passenden Termin.
-                                </span>
+
+                            <p>
+                                Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                Nach dem Abschicken des Formulars sende ich Dir alle wichtigen Informationen per Mail zu.
+                            </p>
+                            <p>
+                                Die Workshop Termine werden regelmäßig aktualisiert und ergänzt. Mach Dir also keine Sorge, falls gerade kein passender Workshop Termin für Dich dabei ist.
+                            </p>
+                            <p>
+                                Für ein individuelles Lettering oder individuelle Workshops kannst Du mich unter <a href="anfrage.html" target="_blank">Deine individuelle Anfrage</a> kontaktieren. Workshop-Gutscheine kannst Du im Shop erwerben.
+                            </p>
                             </p>
                         </div>
                         <!--<div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
@@ -132,9 +137,17 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-12 form-group">
+                            <div class="col-md-6 form-group">
                                 <label for="email">Email</label>
                                 <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control " required>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <label for="full-name">Kurs wählen</label>
+                                <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
+                                    <option value="Select" selected="" disabled="">Kurs</option>
+                                    <option value="Anfaenger 05.05.2020">Anfänger 05.05.2020</option>
+                                    <option value="Anfaenger 12.05.2020">Anfänger 12.05.2020</option>
+                                </select>
                             </div>
                         </div>
 
@@ -155,7 +168,24 @@
 
             </div>
 
-            
+            <div class="row mb-5">
+                <div class="col-12 contact-form-contact-info">
+                    <div class="row">
+                        <div class="col-lg-12" data-aos="fade-up" data-aos-delay="">
+                            <p class="d-flex">
+                                <span class="ion-ios-location icon mr-3"></span>
+                                <span>
+                                    Solltest Du am Workshop nicht teilnehmen können, kannst du deine Workshop-Teilnahme an eine weitere Person übertragen. Lass mir hierzu bitte eine Mail zukommen, wer dich beim Workshop vertreten wird. Bei einer kurzfristigen Absage (2 Tage) ohne Vertretung beträgt die Stornierungsgebühr 50 % des Kurspreises.
+
+
+                                </span>
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
