--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -58,6 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="derstall.html">Der Stall</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop</a>
+                        </li>
                     </ul>
 
 
@@ -82,12 +85,12 @@
     <!-- Was alles dazugehört-->
 
 
-    <div class="section bg-light" id="Infos">
-        <div class="container">
+    <div class="section bg-light" id="Infos" style="padding:30px">
+        <div class="container" >
             <div class="row mb-5">
                 <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
 
-                    <a href="anfrage.html" class="work-thumb">
+                    <a href="kursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Anfänger</h2>
                             <p>55€ Kursgebühr</p>
@@ -95,7 +98,7 @@
                         <img src="images/2Guide_1000p.JPG" alt="Image" class="img-fluid">
                     </a>                    
 
-                    <a href="anfrage.html" class="work-thumb">
+                    <a href="kursbuchenAdvanced.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Fortgeschrittene</h2>
                             <p>60€ Kursgebühr</p>
@@ -117,17 +120,23 @@
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Snacks und Zitronenwasser</li>
-                                    <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei Zimmermann Schreibkultur</li>                                                                      
+                                    <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>                                                                      
                                 </ul>
                             </li>                            
                         </ul>
-                        <p><a href="https://www.zimmermann-schreibkultur.de/" target="_blank" class="btn btn-outline-black ">Webseite besuchen</a></p>
+                        
                     </div>
                 </div>
             </div>
 
         </div>
     </div>
+
+    <!--<div class="section bg-light" style="padding:0px">
+        <div class="container">
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FBerlin&amp;src=ZGUuZ2VybWFuI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23009688&amp;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showPrint=1&amp;showTabs=1&amp;showCalendars=1&amp;showTz=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>-->
 
     <!-- Individuelle Anfrage -->
     <div class="bg-secondary py-5">
