--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="derstall.html">Der Stall</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop</a>
+                        </li>
                     </ul>
 
 
