--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -169,11 +169,11 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-12 contact-form-contact-info">
+                <div class="col-12 ">
                     <div class="row">
                         <div class="col-lg-12" data-aos="fade-up" data-aos-delay="">
                             <p class="d-flex">
-                                <span class="ion-ios-location icon mr-3"></span>
+                                
                                 <span>
                                     Solltest Du am Workshop nicht teilnehmen können, kannst du deine Workshop-Teilnahme an eine weitere Person übertragen. Lass mir hierzu bitte eine Mail zukommen, wer dich beim Workshop vertreten wird. Bei einer kurzfristigen Absage (2 Tage) ohne Vertretung beträgt die Stornierungsgebühr 50 % des Kurspreises.
 
