--- a/shop.html
+++ b/shop.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="anfrage.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Gutscheine bestellen</h2>
 
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="anfrage.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Fußmatten personalisieren</h2>
                         </div>
@@ -118,7 +118,7 @@
 
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="anfrage.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Einladungskarten Hochzeit</h2>
 
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="portfolio-single.html" class="work-thumb">
+                    <a href="anfrage.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Geburtstagskarten</h2>
                         </div>
